# quacks

./: pyproject.toml  quackgpt.ipynb  quacks.ipynb
